# webrtc-audio-processing

./: .gitmodules  .travis.yml  COPYING  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: aec3_karaoke.rs  aec_config.rs  config_karaoke.rs  crosstalk-benchmark.json5  crosstalk-benchmark.rs  karaoke.rs  recording.rs  simple.rs
examples/aec-configs/: config.json5  defaults.json5  multichannel-defaults.json5
examples/common/: mod.rs
examples/recording-configs/: crosstalk-benchmark.json5  record-far-sample.json5  record-pipeline.json5  record-sample.json5
src/: config.rs  experimental.rs  lib.rs  stats.rs
webrtc-audio-processing-config/: Cargo.toml
webrtc-audio-processing-config/src/: lib.rs
webrtc-audio-processing-sys/: Cargo.toml  README.md  build.rs
webrtc-audio-processing-sys/patches/: unlink-multichannel-noise-suppression-filters.patch
webrtc-audio-processing-sys/src/: .clangd  lib.rs  wrapper.cpp  wrapper.hpp
