[package]
name = "webrtc-audio-processing"
version = "0.3.3"
authors = ["Ryo Kawaguchi <ryo@kawagu.ch>"]
repository = "https://github.com/tonarino/webrtc-audio-processing"
edition = "2018"
description = "A wrapper for WebRTC's AudioProcessing module."
documentation = "https://docs.rs/webrtc-audio-processing"
keywords = ["ffi"]
categories = ["multimedia::audio"]
license-file = "COPYING"

[badges]
travis-ci = { repository = "tonarino/webrtc-audio-processing", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
derive_serde = ["webrtc-audio-processing-sys/derive_serde", "serde"]
bundled = ["webrtc-audio-processing-sys/bundled"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
webrtc-audio-processing-sys = { path = "webrtc-audio-processing-sys", version = "0.3.2" }

[dev-dependencies]
portaudio = "0.7"
failure = "0.1"
ctrlc = "3"

[package.metadata.docs.rs]
features = [ "bundled" ]
