[workspace]
members = [".", "webrtc-audio-processing-sys"]
# default-members default to the single root package in non-virtual workspaces, undo that
default-members = [".", "webrtc-audio-processing-sys"]
resolver = "2"

[workspace.metadata.release]
shared-version = true
# create a single tag for all crates
tag-prefix = ""

[package]
name = "webrtc-audio-processing"
version = "2.0.1"
authors = ["Ryo Kawaguchi <ryo@kawagu.ch>"]
repository = "https://github.com/tonarino/webrtc-audio-processing"
edition = "2018"
description = "A wrapper for WebRTC's AudioProcessing module."
documentation = "https://docs.rs/webrtc-audio-processing"
keywords = ["ffi"]
categories = ["multimedia::audio"]
license-file = "COPYING"

[badges]
travis-ci = { repository = "tonarino/webrtc-audio-processing", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
derive_serde = ["webrtc-audio-processing-sys/derive_serde", "serde"]
bundled = ["webrtc-audio-processing-sys/bundled"]
experimental-aec3-config = ["webrtc-audio-processing-sys/experimental-aec3-config"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
webrtc-audio-processing-sys = { path = "webrtc-audio-processing-sys", version = "2.0.1" }
# Only needed for examples
portaudio = { version = "0.8", optional = true }

[[example]]
name = "recording"
required-features = ["derive_serde", "portaudio"]

[[example]]
name = "karaoke"
required-features = ["derive_serde", "portaudio", "experimental-aec3-config"]

[dev-dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
ctrlc = { version = "3", features = ["termination"] }
hound = "3"
json5 = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
log = "0.4"

[package.metadata.docs.rs]
features = ["bundled"]
