[package]
name = "webrtc-audio-processing-config"
description = "WebRTC's AudioProcessing config wrapper structs for webrtc-audio-processing."
documentation = "https://docs.rs/webrtc-audio-processing-config"
version = "2.0.0"
authors = ["Ryo Kawaguchi <ryo@kawagu.ch>"]
repository = "https://github.com/tonarino/webrtc-audio-processing"
edition = "2018"
keywords = ["ffi"]
categories = ["multimedia::audio"]
license-file = "COPYING"

[badges]
maintenance = { status = "actively-developed" }

[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
