[package]
name = "webrtc-audio-processing-sys"
description = "A wrapper for WebRTC's AudioProcessing module."
documentation = "https://docs.rs/webrtc-audio-processing-sys"
version = "0.4.0"
authors = ["Ryo Kawaguchi <ryo@kawagu.ch>"]
repository = "https://github.com/tonarino/webrtc-audio-processing"
edition = "2018"
links = "webrtc-audio-processing"
build = "build.rs"
keywords = ["ffi"]
categories = ["multimedia::audio"]
license-file = "COPYING"

[badges]
travis-ci = { repository = "tonarino/webrtc-audio-processing", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
derive_serde = ["serde"]
bundled = []

[build-dependencies]
autotools = "0.2"
bindgen = "0"
cc = "1"
failure = "0.1"
fs_extra = "1"
regex = "1"
pkg-config = "0.3"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[package.metadata.docs.rs]
features = [ "bundled" ]
