[package]
name = "webrtc-audio-processing-sys"
description = "A wrapper for WebRTC's AudioProcessing module."
documentation = "https://docs.rs/webrtc-audio-processing-sys"
version = "2.0.0"
authors = ["Ryo Kawaguchi <ryo@kawagu.ch>"]
repository = "https://github.com/tonarino/webrtc-audio-processing"
edition = "2018"
links = "webrtc-audio-processing-2"
build = "build.rs"
keywords = ["ffi"]
categories = ["multimedia::audio"]
license-file = "COPYING"

[package.metadata.docs.rs]
# Document with all features enabled.
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
serde = ["dep:serde"]
bundled = []
experimental-aec3-config = ["bundled"]

[build-dependencies]
anyhow = "1"
autotools = "0.2"
bindgen = "0.72"
cc = "1"
fs_extra = "1"
regex = "1"
pkg-config = "0.3"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
